--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: blood_bank
-description: A new Flutter project.
+description: Blood bank web app.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.15.0
   google_fonts: ^5.1.0
+  cloud_firestore: ^4.8.3
 
 dev_dependencies:
   flutter_test:
