--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.15.0
   google_fonts: ^5.1.0
   cloud_firestore: ^4.8.3
+  flutter_typeahead: ^4.6.2
 
 dev_dependencies:
   flutter_test:
